[package]
name = "cave-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = {version = "0.12.1", features = ["wayland"]}
bevy = "0.14.2"
bevy_rapier2d = { version = "0.27.0", features = [ "debug-render-2d" ] }
noise = { version = "0.9.0", features = ["images"] }
rand = "0.8.5"
bevy-inspector-egui = "0.27.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1


